--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Mastermind</string>
     <string name="title_activity_new_game">NewGame</string>
     <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_rules">RulesActivity</string>
 </resources>
