--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,5 @@
     <string name="title_activity_new_game">NewGame</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="title_activity_rules">RulesActivity</string>
-    <string name="title_activity_shared_preference">SharedPreference</string>
+    <string name="title_activity_menu_parent">MenuParentActivity</string>
 </resources>
